2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ValaBinding.mdp, Makefile.am: More makefile fixes.

2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in, Makefile.am: Fix makefile so that it does not directly
	  depend on MD core and it can always be built standalone.
	* ValaBinding.mdp: Enable makefile synchronization.

2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ValaBinding.mdp: Fix gtk-sharp dependency versions.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs, Navigation/ProjectNodeBuilderExtension.cs: 
	  Add tags from packages to class pad and code completion.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/*: Update parse data on file removal.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs: Fix define syntax in generated .pc files.

2008-06-09  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* *: Add package support.

2008-06-04  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com> 

	* *: Add classpad support

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/ValaProject.cs: Track api changes.

2008-03-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com> 

	* *: Ported from CBinding