@@ -1,1 +1,2 @@
 Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
+Jerome Haltom <wasabi@larvalstage.net>
