@@ -32,16 +32,20 @@
 using System;
 using System.IO;
 using System.Collections.Generic;
+using System.Diagnostics;
 
 using Mono.Addins;
 
 using MonoDevelop.Projects;
 using MonoDevelop.Ide.Gui;
+using MonoDevelop.Core.Gui;
 
 namespace MonoDevelop.ValaBinding
 {
 	public partial class EditPackagesDialog : Gtk.Dialog
 	{
+		private static string vapidir;
+
 		private Gtk.ListStore normalPackageListStore = new Gtk.ListStore (typeof(bool), typeof(string), typeof(string));
 		private Gtk.ListStore projectPackageListStore = new Gtk.ListStore (typeof(bool), typeof(string), typeof(string));
 		private Gtk.ListStore selectedPackageListStore = new Gtk.ListStore (typeof(string), typeof(string));
@@ -61,6 +65,26 @@ namespace MonoDevelop.ValaBinding
 		
 		const int SelectedPackageNameID = 0;
 		const int SelectedPackageVersionID = 1;
+
+		static EditPackagesDialog()
+		{
+			try {
+				Process pkgconfig = new Process();
+				pkgconfig.StartInfo.FileName = "pkg-config";
+				pkgconfig.StartInfo.Arguments = "--variable=vapidir vala-1.0";
+				pkgconfig.StartInfo.CreateNoWindow = true;
+				pkgconfig.StartInfo.RedirectStandardOutput = true;
+				pkgconfig.StartInfo.UseShellExecute = false;
+				pkgconfig.Start();
+				vapidir = pkgconfig.StandardOutput.ReadToEnd().Trim();
+				pkgconfig.WaitForExit();
+				pkgconfig.Dispose();
+			} catch(Exception e) {
+				MessageService.ShowError("Unable to detect VAPI path", string.Format("{0}{1}{2}", e.Message, Environment.NewLine, e.StackTrace));
+			}
+			
+			if(!Directory.Exists(vapidir)){ vapidir = "/usr/share/vala/vapi"; }
+		}
 		
 		public EditPackagesDialog(ValaProject project)
 		{
@@ -231,7 +255,7 @@ namespace MonoDevelop.ValaBinding
 		
 		private string[] ScanDirs ()
 		{
-			return new string[]{ "/usr/share/vala/vapi" };
+			return new string[]{ vapidir };
 		}
 		
 		private void OnOkButtonClick (object sender, EventArgs e)
